--- a/valentine website/style.css
+++ b/valentine website/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(images/background.jpg);
+    background-image: url('valentine%20website/images/background.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
