--- a/valentine website/style.css
+++ b/valentine website/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('./images/background.jpg');
+    background-image: url('/Valentine-site/images/bg.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
